library/src/libqdatetime.h

typedef struct QCalendar QCalendar;
typedef struct QDate QDate;
typedef struct QDateTime QDateTime;
typedef struct QTime QTime;
typedef struct QTimeZone QTimeZone;
QTime* QTime_new(QTime* other);
QTime* QTime_new2(QTime* other);
QTime* QTime_new3();
QTime* QTime_new4(int h, int m);
QTime* QTime_new5(QTime* param1);
QTime* QTime_new6(int h, int m, int s);
QTime* QTime_new7(int h, int m, int s, int ms);
bool QTime_IsNull(const QTime* self);
bool QTime_IsValid(const QTime* self);
int QTime_Hour(const QTime* self);
int QTime_Minute(const QTime* self);
int QTime_Second(const QTime* self);
int QTime_Msec(const QTime* self);
libqt_string QTime_ToString(const QTime* self);
libqt_string QTime_ToStringWithFormat(const QTime* self, libqt_string format);
bool QTime_SetHMS(QTime* self, int h, int m, int s);
QTime* QTime_AddSecs(const QTime* self, int secs);
int QTime_SecsTo(const QTime* self, QTime* t);
QTime* QTime_AddMSecs(const QTime* self, int ms);
int QTime_MsecsTo(const QTime* self, QTime* t);
QTime* QTime_FromMSecsSinceStartOfDay(int msecs);
int QTime_MsecsSinceStartOfDay(const QTime* self);
QTime* QTime_CurrentTime();
QTime* QTime_FromStringWithStringVal(libqt_string stringVal);
QTime* QTime_FromString4(libqt_string stringVal, libqt_string format);
bool QTime_IsValid2(int h, int m, int s);
libqt_string QTime_ToString1(const QTime* self, int f);
bool QTime_SetHMS4(QTime* self, int h, int m, int s, int ms);
QTime* QTime_FromString23(libqt_string stringVal, int format);
bool QTime_IsValid4(int h, int m, int s, int ms);
void QTime_Delete(QTime* self);
QDateTime* QDateTime_new();
void QDateTime_OperatorAssign(QDateTime* self, QDateTime* other);
void QDateTime_Swap(QDateTime* self, QDateTime* other);
bool QDateTime_IsNull(const QDateTime* self);
bool QDateTime_IsValid(const QDateTime* self);
QDate* QDateTime_Date(const QDateTime* self);
QTime* QDateTime_Time(const QDateTime* self);
int QDateTime_TimeSpec(const QDateTime* self);
int QDateTime_OffsetFromUtc(const QDateTime* self);
QTimeZone* QDateTime_TimeZone(const QDateTime* self);
libqt_string QDateTime_TimeZoneAbbreviation(const QDateTime* self);
bool QDateTime_IsDaylightTime(const QDateTime* self);
long long QDateTime_ToMSecsSinceEpoch(const QDateTime* self);
long long QDateTime_ToSecsSinceEpoch(const QDateTime* self);
void QDateTime_SetDate(QDateTime* self, QDate* date);
void QDateTime_SetTime(QDateTime* self, QTime* time);
void QDateTime_SetTimeSpec(QDateTime* self, int spec);
void QDateTime_SetOffsetFromUtc(QDateTime* self, int offsetSeconds);
void QDateTime_SetTimeZone(QDateTime* self, QTimeZone* toZone);
void QDateTime_SetMSecsSinceEpoch(QDateTime* self, long long msecs);
void QDateTime_SetSecsSinceEpoch(QDateTime* self, long long secs);
libqt_string QDateTime_ToString(const QDateTime* self);
libqt_string QDateTime_ToStringWithFormat(const QDateTime* self, libqt_string format);
QDateTime* QDateTime_AddDays(const QDateTime* self, long long days);
QDateTime* QDateTime_AddMonths(const QDateTime* self, int months);
QDateTime* QDateTime_AddYears(const QDateTime* self, int years);
QDateTime* QDateTime_AddSecs(const QDateTime* self, long long secs);
QDateTime* QDateTime_AddMSecs(const QDateTime* self, long long msecs);
QDateTime* QDateTime_ToTimeSpec(const QDateTime* self, int spec);
QDateTime* QDateTime_ToLocalTime(const QDateTime* self);
QDateTime* QDateTime_ToUTC(const QDateTime* self);
QDateTime* QDateTime_ToOffsetFromUtc(const QDateTime* self, int offsetSeconds);
QDateTime* QDateTime_ToTimeZone(const QDateTime* self, QTimeZone* toZone);
long long QDateTime_DaysTo(const QDateTime* self, QDateTime* param1);
long long QDateTime_SecsTo(const QDateTime* self, QDateTime* param1);
long long QDateTime_MsecsTo(const QDateTime* self, QDateTime* param1);
QDateTime* QDateTime_CurrentDateTime();
QDateTime* QDateTime_CurrentDateTimeUtc();
QDateTime* QDateTime_FromStringWithStringVal(libqt_string stringVal);
QDateTime* QDateTime_FromString4(libqt_string stringVal, libqt_string format);
QDateTime* QDateTime_FromMSecsSinceEpoch(long long msecs);
QDateTime* QDateTime_FromSecsSinceEpoch(long long secs);
QDateTime* QDateTime_FromMSecsSinceEpoch2(long long msecs, QTimeZone* timeZone);
QDateTime* QDateTime_FromSecsSinceEpoch2(long long secs, QTimeZone* timeZone);
long long QDateTime_CurrentMSecsSinceEpoch();
long long QDateTime_CurrentSecsSinceEpoch();
libqt_string QDateTime_ToString1(const QDateTime* self, int format);
libqt_string QDateTime_ToString22(const QDateTime* self, libqt_string format, QCalendar* cal);
QDateTime* QDateTime_FromString23(libqt_string stringVal, int format);
QDateTime* QDateTime_FromString34(libqt_string stringVal, libqt_string format, QCalendar* cal);
QDateTime* QDateTime_FromMSecsSinceEpoch22(long long msecs, int spec);
QDateTime* QDateTime_FromMSecsSinceEpoch3(long long msecs, int spec, int offsetFromUtc);
QDateTime* QDateTime_FromSecsSinceEpoch22(long long secs, int spec);
QDateTime* QDateTime_FromSecsSinceEpoch3(long long secs, int spec, int offsetFromUtc);
void QDateTime_Delete(QDateTime* self);