src/qt/libqdatetime.bf

extension CQt
{
	[LinkName("QTime_new")]
	public static extern void* QTime_new(void* other);
	[LinkName("QTime_new2")]
	public static extern void* QTime_new2(void* other);
	[LinkName("QTime_new3")]
	public static extern void* QTime_new3();
	[LinkName("QTime_new4")]
	public static extern void* QTime_new4(int32 h, int32 m);
	[LinkName("QTime_new5")]
	public static extern void* QTime_new5(void* param1);
	[LinkName("QTime_new6")]
	public static extern void* QTime_new6(int32 h, int32 m, int32 s);
	[LinkName("QTime_new7")]
	public static extern void* QTime_new7(int32 h, int32 m, int32 s, int32 ms);
	[LinkName("QTime_IsNull")]
	public static extern bool QTime_IsNull(void* c_this);
	[LinkName("QTime_IsValid")]
	public static extern bool QTime_IsValid(void* c_this);
	[LinkName("QTime_Hour")]
	public static extern int32 QTime_Hour(void* c_this);
	[LinkName("QTime_Minute")]
	public static extern int32 QTime_Minute(void* c_this);
	[LinkName("QTime_Second")]
	public static extern int32 QTime_Second(void* c_this);
	[LinkName("QTime_Msec")]
	public static extern int32 QTime_Msec(void* c_this);
	[LinkName("QTime_ToString")]
	public static extern libqt_string QTime_ToString(void* c_this);
	[LinkName("QTime_ToStringWithFormat")]
	public static extern libqt_string QTime_ToStringWithFormat(void* c_this, libqt_string format);
	[LinkName("QTime_SetHMS")]
	public static extern bool QTime_SetHMS(void* c_this, int32 h, int32 m, int32 s);
	[LinkName("QTime_AddSecs")]
	public static extern void QTime_AddSecs(void* c_this, int32 secs);
	[LinkName("QTime_SecsTo")]
	public static extern int32 QTime_SecsTo(void* c_this, void t);
	[LinkName("QTime_AddMSecs")]
	public static extern void QTime_AddMSecs(void* c_this, int32 ms);
	[LinkName("QTime_MsecsTo")]
	public static extern int32 QTime_MsecsTo(void* c_this, void t);
	[LinkName("QTime_FromMSecsSinceStartOfDay")]
	public static extern void QTime_FromMSecsSinceStartOfDay(int32 msecs);
	[LinkName("QTime_MsecsSinceStartOfDay")]
	public static extern int32 QTime_MsecsSinceStartOfDay(void* c_this);
	[LinkName("QTime_CurrentTime")]
	public static extern void QTime_CurrentTime();
	[LinkName("QTime_FromStringWithStringVal")]
	public static extern void QTime_FromStringWithStringVal(libqt_string stringVal);
	[LinkName("QTime_FromString4")]
	public static extern void QTime_FromString4(libqt_string stringVal, libqt_string format);
	[LinkName("QTime_IsValid2")]
	public static extern bool QTime_IsValid2(int32 h, int32 m, int32 s);
	[LinkName("QTime_ToString1")]
	public static extern libqt_string QTime_ToString1(void* c_this, int64 f);
	[LinkName("QTime_SetHMS4")]
	public static extern bool QTime_SetHMS4(void* c_this, int32 h, int32 m, int32 s, int32 ms);
	[LinkName("QTime_FromString23")]
	public static extern void QTime_FromString23(libqt_string stringVal, int64 format);
	[LinkName("QTime_IsValid4")]
	public static extern bool QTime_IsValid4(int32 h, int32 m, int32 s, int32 ms);
	/// Delete this object from C++ memory
	[LinkName("QTime_Delete")]
	public static extern void QTime_Delete(void* self);
}
public interface IQDateTime
{
	void* NativePtr { get; }
}
public struct QDateTimePtr : IQDateTime, IDisposable
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(void* ptr)
	{
		this.nativePtr = ptr;
	}
	
	public static Self New()
	{
		return .(CQt.QDateTime_new());
	}
	
	public void Dispose()
	{
		CQt.QDateTime_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(IQDateTime other)
	{
		CQt.QDateTime_OperatorAssign(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public void Swap(IQDateTime other)
	{
		CQt.QDateTime_Swap(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool IsNull()
	{
		return CQt.QDateTime_IsNull(this.nativePtr);
	}
	
	public bool IsValid()
	{
		return CQt.QDateTime_IsValid(this.nativePtr);
	}
	
	public void Date()
	{
		CQt.QDateTime_Date(this.nativePtr);
	}
	
	public void Time()
	{
		CQt.QDateTime_Time(this.nativePtr);
	}
	
	public int64 TimeSpec()
	{
		return CQt.QDateTime_TimeSpec(this.nativePtr);
	}
	
	public int32 OffsetFromUtc()
	{
		return CQt.QDateTime_OffsetFromUtc(this.nativePtr);
	}
	
	public void TimeZone()
	{
		CQt.QDateTime_TimeZone(this.nativePtr);
	}
	
	public libqt_string TimeZoneAbbreviation()
	{
		return CQt.QDateTime_TimeZoneAbbreviation(this.nativePtr);
	}
	
	public bool IsDaylightTime()
	{
		return CQt.QDateTime_IsDaylightTime(this.nativePtr);
	}
	
	public int64 ToMSecsSinceEpoch()
	{
		return CQt.QDateTime_ToMSecsSinceEpoch(this.nativePtr);
	}
	
	public int64 ToSecsSinceEpoch()
	{
		return CQt.QDateTime_ToSecsSinceEpoch(this.nativePtr);
	}
	
	public void SetDate(IQDate date)
	{
		CQt.QDateTime_SetDate(this.nativePtr, default);
	}
	
	public void SetTime(IQTime time)
	{
		CQt.QDateTime_SetTime(this.nativePtr, default);
	}
	
	public void SetTimeSpec(int64 spec)
	{
		CQt.QDateTime_SetTimeSpec(this.nativePtr, (int64)spec);
	}
	
	public void SetOffsetFromUtc(int32 offsetSeconds)
	{
		CQt.QDateTime_SetOffsetFromUtc(this.nativePtr, offsetSeconds);
	}
	
	public void SetTimeZone(IQTimeZone toZone)
	{
		CQt.QDateTime_SetTimeZone(this.nativePtr, (toZone == default || toZone.NativePtr == default) ? default : toZone.NativePtr);
	}
	
	public void SetMSecsSinceEpoch(int64 msecs)
	{
		CQt.QDateTime_SetMSecsSinceEpoch(this.nativePtr, msecs);
	}
	
	public void SetSecsSinceEpoch(int64 secs)
	{
		CQt.QDateTime_SetSecsSinceEpoch(this.nativePtr, secs);
	}
	
	public libqt_string ToString()
	{
		return CQt.QDateTime_ToString(this.nativePtr);
	}
	
	public libqt_string ToStringWithFormat(String format)
	{
		return CQt.QDateTime_ToStringWithFormat(this.nativePtr, libqt_string(format));
	}
	
	public void AddDays(int64 days)
	{
		CQt.QDateTime_AddDays(this.nativePtr, days);
	}
	
	public void AddMonths(int32 months)
	{
		CQt.QDateTime_AddMonths(this.nativePtr, months);
	}
	
	public void AddYears(int32 years)
	{
		CQt.QDateTime_AddYears(this.nativePtr, years);
	}
	
	public void AddSecs(int64 secs)
	{
		CQt.QDateTime_AddSecs(this.nativePtr, secs);
	}
	
	public void AddMSecs(int64 msecs)
	{
		CQt.QDateTime_AddMSecs(this.nativePtr, msecs);
	}
	
	public void ToTimeSpec(int64 spec)
	{
		CQt.QDateTime_ToTimeSpec(this.nativePtr, (int64)spec);
	}
	
	public void ToLocalTime()
	{
		CQt.QDateTime_ToLocalTime(this.nativePtr);
	}
	
	public void ToUTC()
	{
		CQt.QDateTime_ToUTC(this.nativePtr);
	}
	
	public void ToOffsetFromUtc(int32 offsetSeconds)
	{
		CQt.QDateTime_ToOffsetFromUtc(this.nativePtr, offsetSeconds);
	}
	
	public void ToTimeZone(IQTimeZone toZone)
	{
		CQt.QDateTime_ToTimeZone(this.nativePtr, (toZone == default || toZone.NativePtr == default) ? default : toZone.NativePtr);
	}
	
	public int64 DaysTo(IQDateTime param1)
	{
		return CQt.QDateTime_DaysTo(this.nativePtr, (param1 == default || param1.NativePtr == default) ? default : param1.NativePtr);
	}
	
	public int64 SecsTo(IQDateTime param1)
	{
		return CQt.QDateTime_SecsTo(this.nativePtr, (param1 == default || param1.NativePtr == default) ? default : param1.NativePtr);
	}
	
	public int64 MsecsTo(IQDateTime param1)
	{
		return CQt.QDateTime_MsecsTo(this.nativePtr, (param1 == default || param1.NativePtr == default) ? default : param1.NativePtr);
	}
	
	public static void CurrentDateTime()
	{
		CQt.QDateTime_CurrentDateTime();
	}
	
	public static void CurrentDateTimeUtc()
	{
		CQt.QDateTime_CurrentDateTimeUtc();
	}
	
	public static void FromStringWithStringVal(String stringVal)
	{
		CQt.QDateTime_FromStringWithStringVal(libqt_string(stringVal));
	}
	
	public static void FromString4(String stringVal, String format)
	{
		CQt.QDateTime_FromString4(libqt_string(stringVal), libqt_string(format));
	}
	
	public static void FromMSecsSinceEpoch(int64 msecs)
	{
		CQt.QDateTime_FromMSecsSinceEpoch(msecs);
	}
	
	public static void FromSecsSinceEpoch(int64 secs)
	{
		CQt.QDateTime_FromSecsSinceEpoch(secs);
	}
	
	public static void FromMSecsSinceEpoch2(int64 msecs, IQTimeZone timeZone)
	{
		CQt.QDateTime_FromMSecsSinceEpoch2(msecs, (timeZone == default || timeZone.NativePtr == default) ? default : timeZone.NativePtr);
	}
	
	public static void FromSecsSinceEpoch2(int64 secs, IQTimeZone timeZone)
	{
		CQt.QDateTime_FromSecsSinceEpoch2(secs, (timeZone == default || timeZone.NativePtr == default) ? default : timeZone.NativePtr);
	}
	
	public static int64 CurrentMSecsSinceEpoch()
	{
		return CQt.QDateTime_CurrentMSecsSinceEpoch();
	}
	
	public static int64 CurrentSecsSinceEpoch()
	{
		return CQt.QDateTime_CurrentSecsSinceEpoch();
	}
	
	public libqt_string ToString1(int64 format)
	{
		return CQt.QDateTime_ToString1(this.nativePtr, (int64)format);
	}
	
	public libqt_string ToString22(String format, IQCalendar cal)
	{
		return CQt.QDateTime_ToString22(this.nativePtr, libqt_string(format), default);
	}
	
	public static void FromString23(String stringVal, int64 format)
	{
		CQt.QDateTime_FromString23(libqt_string(stringVal), (int64)format);
	}
	
	public static void FromString34(String stringVal, String format, IQCalendar cal)
	{
		CQt.QDateTime_FromString34(libqt_string(stringVal), libqt_string(format), default);
	}
	
	public static void FromMSecsSinceEpoch22(int64 msecs, int64 spec)
	{
		CQt.QDateTime_FromMSecsSinceEpoch22(msecs, (int64)spec);
	}
	
	public static void FromMSecsSinceEpoch3(int64 msecs, int64 spec, int32 offsetFromUtc)
	{
		CQt.QDateTime_FromMSecsSinceEpoch3(msecs, (int64)spec, offsetFromUtc);
	}
	
	public static void FromSecsSinceEpoch22(int64 secs, int64 spec)
	{
		CQt.QDateTime_FromSecsSinceEpoch22(secs, (int64)spec);
	}
	
	public static void FromSecsSinceEpoch3(int64 secs, int64 spec, int32 offsetFromUtc)
	{
		CQt.QDateTime_FromSecsSinceEpoch3(secs, (int64)spec, offsetFromUtc);
	}
	
}
public class QDateTime
{
	public QDateTimePtr handle;
	
	public static implicit operator QDateTimePtr(Self self)
	{
		return self.handle;
	}
	
	public this()
	{
		this.handle = QDateTimePtr.New();
	}
	
	public ~this()
	{
		this.handle.Dispose();
	}
	
	public void OperatorAssign(IQDateTime other)
	{
		this.handle.OperatorAssign(other);
	}
	
	public void Swap(IQDateTime other)
	{
		this.handle.Swap(other);
	}
	
	public bool IsNull()
	{
		return this.handle.IsNull();
	}
	
	public bool IsValid()
	{
		return this.handle.IsValid();
	}
	
	public void Date()
	{
		this.handle.Date();
	}
	
	public void Time()
	{
		this.handle.Time();
	}
	
	public int64 TimeSpec()
	{
		return this.handle.TimeSpec();
	}
	
	public int32 OffsetFromUtc()
	{
		return this.handle.OffsetFromUtc();
	}
	
	public void TimeZone()
	{
		this.handle.TimeZone();
	}
	
	public libqt_string TimeZoneAbbreviation()
	{
		return this.handle.TimeZoneAbbreviation();
	}
	
	public bool IsDaylightTime()
	{
		return this.handle.IsDaylightTime();
	}
	
	public int64 ToMSecsSinceEpoch()
	{
		return this.handle.ToMSecsSinceEpoch();
	}
	
	public int64 ToSecsSinceEpoch()
	{
		return this.handle.ToSecsSinceEpoch();
	}
	
	public void SetDate(IQDate date)
	{
		this.handle.SetDate(default);
	}
	
	public void SetTime(IQTime time)
	{
		this.handle.SetTime(default);
	}
	
	public void SetTimeSpec(int64 spec)
	{
		this.handle.SetTimeSpec(spec);
	}
	
	public void SetOffsetFromUtc(int32 offsetSeconds)
	{
		this.handle.SetOffsetFromUtc(offsetSeconds);
	}
	
	public void SetTimeZone(IQTimeZone toZone)
	{
		this.handle.SetTimeZone(toZone);
	}
	
	public void SetMSecsSinceEpoch(int64 msecs)
	{
		this.handle.SetMSecsSinceEpoch(msecs);
	}
	
	public void SetSecsSinceEpoch(int64 secs)
	{
		this.handle.SetSecsSinceEpoch(secs);
	}
	
	public libqt_string ToString()
	{
		return this.handle.ToString();
	}
	
	public libqt_string ToStringWithFormat(String format)
	{
		return this.handle.ToStringWithFormat(format);
	}
	
	public void AddDays(int64 days)
	{
		this.handle.AddDays(days);
	}
	
	public void AddMonths(int32 months)
	{
		this.handle.AddMonths(months);
	}
	
	public void AddYears(int32 years)
	{
		this.handle.AddYears(years);
	}
